added more clients, and styling

--- a/css/main.sass
+++ b/css/main.sass
@@ -5,6 +5,10 @@ $brand: #0B4062
 body
   font-family: helvetica, arial, sans-serif
 
+hr
+  display: block
+  margin: 2em 0
+  clear: both
 .container
   max-width: 550px
   margin: 0 auto
